# CylinderDetection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  format.md
docs/: CommentLireUnEnregistrement.md
src/: AABB.cpp  AABB.h  CameraLocation.cpp  CameraLocation.h  constants.h  cylinder_detection.cpp  cylinder_detection.h  main.cpp  opengl_helper.cpp  opengl_helper.h  run.cpp  run.h
src/network/: Client.cpp  Client.h
src/playback/: main.cpp
src/record/: main.cpp
